Fix font letter spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,5 +7,6 @@
 @layer base {
   html {
     font-family: 'Roboto Mono', monospace;
+    letter-spacing: -0.05em;
   }
 }
